# downloader

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
config/: bumpversion.cfg
downloader/: __init__.py  downloader.py  main.py  progress.py
src/downloader/: __init__.py
src/downloader/cli/: entry_point.py
src/downloader/main/: downloader.py  main.py  progress.py
test/: downloader.py  downloader_test.py  test_multiple.py
tests/: conftest.py  test_cli_entry_point.py  test_download.py
