[project]
name = "fire-downloader"
version = "1.0.3"
description = "Package for downloading urls"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "package-utils >=0.6.1, <1",
    "python-dateutil >=2.8.2, <3",
    "requests >=2.31.0, <3",
    "retry >=0.9.2, <1",
    "superpathlib >=2.0.1, <3",
    "tqdm >=4.66.1, <5",
]

[project.optional-dependencies]
dev = [
    "package-dev-tools >=0.5.11, <1",
    "package-dev-utils >=0.1.6, <1",
    "types-python-dateutil >=2.9.0.20240316, <3",
    "types-requests >=2.32.0.20240622, <3",
    "types-retry >=0.9.9.4, <1",
    "types-tqdm >=4.66.0.20240417, <5",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/downloader"

[project.scripts]
download = "downloader.cli:entry_point"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest tests"

[tool.coverage.report]
precision = 4
fail_under = 90

[tool.mypy]
strict = true
no_implicit_reexport = false

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # annotate self
    "ANN102",  # annotate cls
    "ANN401",  # annotated with Any
    "D", # docstrings
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]  # assert used

[tool.setuptools.package-data]
downloader = ["py.typed"]
