[metadata]
name = fire-downloader
version = 1.0.0
author = Quinten Roets
author_email = quinten.roets@gmail.com
url = https://github.com/quintenroets/downloader
license = MIT

[options]
packages = find:
package_dir =
    = .
install_requires =
    requests
    retry
    tqdm
    superpathlib

[options.entry_points]
console_scripts =
    download = downloader.main:main

[options.packages.find]
where = .

[bdist_wheel]
universal = true
